2008-03-02  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/eeprom.h: Change cast operation to avoid warning
	with '-Wsystem-headers' option.
	* tests/simulate/avr/eeprom-1.c: Add comment about avr-gcc 4.2.2 bug.
	Note, avr-gcc 4.2.3 is correct.

2008-03-01  Dmitry Xmelkov  <dmix@gmail.ru>

	New variant of EEPROM functions: inline byte procedures and library
	multibyte envelopes.
	* include/avr/eeprom.h: Rewrite on the base of project by Eric B.
	Weddington.
	* libc/misc/eeprom.S: Remove file.
	* libc/misc/ee_rb.S: Remove file.
	* libc/misc/ee_rblk.S: Remove file.
	* libc/misc/ee_rw.S: Remove file.
	* libc/misc/ee_wb.S: Remove file.
	* libc/misc/ee_wblk.S: Remove file.
	* libc/misc/ee_ww.S: Remove file.
	* libc/misc/eerd_block.c: New file.
	* libc/misc/eerd_dword.c: New file.
	* libc/misc/eerd_word.c: New file.
	* libc/misc/eewr_block.c: New file.
	* libc/misc/eewr_dword.c: New file.
	* libc/misc/eewr_word.c: New file.
	* libc/misc/Files.am: Remove old sources, add new.
	* libc/misc/Makefile.am: Include $(misc_a_c_sources) to EXTRA_DIST.
	* libc/misc/Rules.am: Remove rules to build chip-specific objects.
	* tests/simulate/avr: New directory (for AVR-specific functions).
	* tests/simulate/avr/eeprom-1.c: New file.
	* tests/simulate/runtest.sh: Add 'avr/*.c' to default test list.
	Add $MCU_LIST_FULL for AVR-specific testing.
	* NEWS: Notes about EEPROM changes and fixed bug.

2008-02-24  Dmitry Xmelkov  <dmix@gmail.ru>

	* doc/api/bench.dox: Change remark about GCC versions: replace
	scanf() example to dtostre().
	* doc/api/bench-libc.dox: Update the results. Give two sizes:
	with and without prologue/epilogue modules. Add sscanf() with
	'%[' conversion.

2008-02-23  Dmitry Xmelkov  <dmix@gmail.ru>

	Optimize tests in space to satisfy the space-worse 4.2.2(3) GCC.
	Split in cases where optimization is not possible.
	* tests/simulate/scanf/sscanf-d1.c: Optimize in space.
	* tests/simulate/scanf/sscanf-hh.c: Ditto.
	* tests/simulate/scanf/sscanf-o1.c: Ditto.